# uni-processamento-grafico

./: .gitignore  App.sln  CMakeLists.txt  main.cpp  processamento-grafico.sln  processamento-grafico.vcxproj  processamento-grafico.vcxproj.filters  shader.h
Debug/: OrthographicCamera.ilk  Transforms.ilk  processamento-grafico.ilk  vc142.idb
Debug/processa.4691D050.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  processamento-grafico.lastbuildstate
HelloTriangle/: HelloTriangle.vcxproj  Source.cpp
HelloTriangle/Debug/: vc140.idb  vc142.idb
HelloTriangle/Debug/Orthogra.D2B58B13.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OrthographicCamera.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HelloTriangle/Debug/Transforms.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Transforms.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
debug/: App.ilk  Lista1.ilk
shaders/: shader.fs  shader.vs  transformations.vs
src/: App.cpp  App.vcxproj
src/Debug/: vc142.idb
src/Debug/App.tlog/: App.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/Debug/Lista1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lista1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: vc142.idb
x64/Debug/processa.4691D050.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  processamento-grafico.lastbuildstate
